[gd_scene load_steps=9 format=2]

[ext_resource path="res://TouchControlDirection.gd" type="Script" id=1]
[ext_resource path="res://gfx/Ui/touch2.png" type="Texture" id=2]
[ext_resource path="res://gfx/Ui/touch1.png" type="Texture" id=3]
[ext_resource path="res://gfx/Ui/touch_circle.png" type="Texture" id=4]
[ext_resource path="res://gfx/Ui/touch_down2.png" type="Texture" id=5]
[ext_resource path="res://gfx/Ui/touch_down1.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="TouchControlDirection" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( -4, 0 )
z_index = 2
normal = ExtResource( 2 )
pressed = ExtResource( 5 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="Sprite" type="Sprite" parent="Left"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 8, 8 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 4 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 16, 0 )
z_index = 2
normal = ExtResource( 3 )
pressed = ExtResource( 6 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="Right"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 8, 8 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 4 )
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
